<resources>
    <string name="app_name">Laundry</string>
    <string name="idpelanggan">ID Pelanggan</string>
    <string name="namapel">Nama Pelanggan</string>
    <string name="alamat">Alamat</string>
    <string name="nohp">No HP</string>
    <string name="terda">Terdaftar</string>
    <string name="hub">Hubungi</string>
    <string name="lihat">Lihat</string>
    <string name="tambahpel">Tambahkan Pelanggan</string>
    <string name="namaleng">Nama Lengkap</string>
    <string name="terapkan">Simpan</string>
    <string name="pegawai">Pegawai</string>
    <string name="namapeg">Nama Pegawai</string>
    <string name="tambahkanpeg">Tambahkan Pegawai</string>
    <string name="cabang">Cabang</string>
    <string name="sukses_simpan_pelanggan">Sukses Simpan Pelanggan</string>
    <string name="validasi_nama_pelanggan">Validasi Nama Pelanggan</string>
    <string name="validasi_alamat_pelanggan">Validasi Alamat Pelanggan</string>
    <string name="validasi_noHP_pelanggan">Validasi No HP Pelanggan</string>
    <string name="validasi_cabang">Validasi Cabang</string>
    <string name="tambah_pelanggan_gagal">tambah_pelanggan_gagal</string>

</resources>