<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/roundedbg"
            android:orientation="vertical">

            <!-- Header Card -->
            <TextView
                android:id="@+id/tvCARD_PELANGGAN_ID"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/sunday"
                android:text="@string/pegawai"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:paddingHorizontal="20dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- Nama -->
                <TextView
                    android:id="@+id/tvCARD_PELANGGAN_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namapeg"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="6dp"/>

                <!-- Alamat -->
                <TextView
                    android:id="@+id/tvCARD_PELANGGAN_alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"/>

                <!-- No HP -->
                <TextView
                    android:id="@+id/tvCARD_PELANGGAN_nohp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nohp"
                    android:textSize="14sp"
                    android:layout_marginBottom="4dp"/>

                <!-- Terdaftar Sejak -->
                <TextView
                    android:id="@+id/tvCARD_PELANGGAN_terdaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terda"
                    android:textSize="14sp"
                    android:layout_marginBottom="10dp"/>

                <!-- Tombol Aksi -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/btn_hubungi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:backgroundTint="#22D10B"
                        android:text="@string/hub"
                        android:textColor="@android:color/white"/>

                    <Button
                        android:id="@+id/btn_lihat"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/lihat"
                        android:backgroundTint="@color/purplePrimary"
                        android:textColor="@android:color/white"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>