<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Judul -->
    <TextView
        android:id="@+id/tvtambahkan_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambahkanpeg"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Nama Lengkap -->
    <TextView
        android:id="@+id/namalengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaleng"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtambahkan_pelanggan"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etnama_lengkap"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/namaleng"
        android:background="@drawable/roundedbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/namalengkap"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- Alamat -->
    <TextView
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etnama_lengkap"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etalamat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/alamat"
        android:background="@drawable/roundedbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alamat"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- No HP -->
    <TextView
        android:id="@+id/NoHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nohp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etalamat"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etNoHp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/nohp"
        android:background="@drawable/roundedbg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/NoHp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- Button Simpan -->
    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/terapkan"
        android:backgroundTint="@color/sunday"
        app:layout_constraintTop_toBottomOf="@id/etNoHp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>