<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Pelanggan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".Pelanggan.TambahPelanggan">

    <!-- Judul -->
    <TextView
        android:id="@+id/tvtambahkan_pelanggan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tambahpel"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Nama Lengkap -->
    <TextView
        android:id="@+id/namalengkap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/namaleng"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvtambahkan_pelanggan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etnama_lengkap"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/namaleng"
        android:background="@drawable/roundedbg"
        app:layout_constraintTop_toBottomOf="@id/namalengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- Alamat -->
    <TextView
        android:id="@+id/alamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etnama_lengkap"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etalamat"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/alamat"
        android:background="@drawable/roundedbg"
        app:layout_constraintTop_toBottomOf="@id/alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- No HP -->
    <TextView
        android:id="@+id/NoHp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nohp"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etalamat"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etNoHp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/nohp"
        android:background="@drawable/roundedbg"
        app:layout_constraintTop_toBottomOf="@id/NoHp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tvCabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabang"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/etNoHp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/etCabang"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/cabang"
        android:background="@drawable/roundedbg"
        app:layout_constraintTop_toBottomOf="@id/tvCabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"/>

    <!-- Button Simpan -->
    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/sunday"
        android:text="@string/terapkan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCabang" />

</androidx.constraintlayout.widget.ConstraintLayout>